test/compiler/fail/elseonly.bt
else {
  print("else print");
}

if (1){
  print("1 print");
}