test/compiler/fail/elseonly.err
[31m[1merror:[0m parser error line 1 at column 4: else
